--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -79,7 +79,7 @@ unit of energy spent. But in order to achieve that, how energy is spent across
 all the different computing layers needs to be assessed, and understood.
 
 This is why getting the student to achieve a certain amount of understanding of
-the different process involved, methdologies needed to carry out that
+the different process involved, methodologies needed to carry out that
 assessment, and eventually design your code from the ground up or refactoring it
 to make it {\em greener} is a challenge.
 
@@ -90,7 +90,7 @@ needed ``behavioral attributes'' as well as in the
 Master's degree in Information Systems (IS), as part of the IS Strategy and
 Governance competence; the computer engineering set of draft competencies
 includes it as part of the Systems Resource Management subject matter. This
-again shows the inter-disciplinar content that needs to be considered even if
+again shows the inter-disciplinary content that needs to be considered even if
 the focus is on software engineering.
 
 The final objective would be to get the student to understand how choices of
@@ -109,7 +109,7 @@ would, then, would be as follows:\begin{itemize}
   bottlenecks from the point of view of performance as well as energy
   consumption; also find out how this consumption scales with workload size.
 \item {\bf Refactor for reduction of energy footprint}: once the bottlenecks
-  have been indentified and specific benchmarks developed to measure the energy
+  have been identified and specific benchmarks developed to measure the energy
   footprint, the student needs to work across the board to reduce the footprint:
   choosing the computing platform where possible, configuring the application to
   work on specific computing units, choosing the programming language toolchain
@@ -120,7 +120,7 @@ would, then, would be as follows:\begin{itemize}
 \end{itemize}
 
 Since most of these items require hands-on experience, we have decided to use
-active learning methodogies, organizing the students in groups and
+active learning methodologies, organizing the students in groups and
 making them develop a project from scratch where they will first measure energy
 consumption and then minimize it. The grade can be tied to the
 reduction achieved. This way, putting the best practices in green computing
