--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -41,7 +41,7 @@
 try to minimize the carbon footprint of software applications. As such, it is
 not a single body of knowledge, but a series of best practices that help reduce
 energy consumption relying on the features of any of the different layers that
-are exercised by a software applications. This represents a challenge at the
+are exercised by software applications. This represents a challenge at the
 time of designing a comprehensive syllabus that would help students develop the
 series of skills needed to identify energy bottlenecks and eliminate them. In
 this poster we will describe the different concepts involved, and how they will
@@ -76,7 +76,7 @@ Green computing \cite{kurp2008green} deals, in general, with reducing the
 environmental impact of the creation and use of computing resources. From the
 software perspective, it proposes maximizing the amount of work done for every
 unit of energy spent. But in order to achieve that, how energy is spent across
-all the different computing layers needs to be assessed, and understood.
+all the different computing layers need to be assessed, and understood.
 
 This is why getting the student to achieve a certain amount of understanding of
 the different process involved, methodologies needed to carry out that
