--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -64,7 +64,7 @@ be delivered to guarantee the achievement of learning objectives.
 %%
 %% Keywords. The author(s) should pick words that accurately describe
 %% the work being presented. Separate the keywords with commas.
-\keywords{Software engineering, green computing}
+\keywords{Software engineering, green computing, project-based learning}
 
 %\received{20 February 2007}
 %\received[revised]{12 March 2009}
