Deanonymize to upload to institutional repo

--- a/paper/green-computing.tex
+++ b/paper/green-computing.tex
@@ -4,37 +4,20 @@
   \providecommand\BibTeX{{%
     Bib\TeX}}}
 
-\setcopyright{acmlicensed}
-\copyrightyear{2024}
-\acmYear{2024}
-\acmDOI{XXXXXXX.XXXXXXX}
-
-\acmConference[ITICSE'24]{ITICSE'24}{June 03--05,  2018}{Milan, IT}
-\acmISBN{978-1-4503-XXXX-X/18/06}
-
 \begin{document}
 
 \title{Teaching how to engineer greener software}
 
-% \author{JJ Merelo-Guervós}
-% \email{jmerelo@ugr.es}
-% \orcid{0000-0002-1385-9741}
-% \affiliation{%
-%   \institution{Department of Computer Engineering, Automatics and Robotics and CITIC, University of Granada}
-%   \city{Granada}
-%   \country{Spain}
-% }
-%
-\author{A. U. Thor}
-\email{thorau@univ.edu}
-\orcid{0000-000}
+\author{JJ Merelo-Guervós}
+\email{jmerelo@ugr.es}
+\orcid{0000-0002-1385-9741}
 \affiliation{%
-  \institution{Department of XYZ, Edu. U.}
-  \city{A City}
-  \country{A Country}
+  \institution{Department of Computer Engineering, Automatics and Robotics and CITIC, University of Granada}
+  \city{Granada}
+  \country{Spain}
 }
 
-\renewcommand{\shortauthors}{A. U. Thor}
+\renewcommand{\shortauthors}{J. J. Merelo}
 
 \begin{abstract}
 {\em Green} computing is a general term that describes a host of techniques that
@@ -105,7 +88,7 @@ would, then, would be as follows:\begin{itemize}
   help the student to understand how the workload exercises different parts of
   the hardware, and why it does so.
 \item {\bf Understanding how the workload spends energy}: software profiling,
-  methodologies and tools for energy profiling (PowerMeter, pinpoint, hardware meters). This will help the student identify
+  methodologies and tools for energy profiling (PowerMeter, {\sf pinpoint}, hardware meters). This will help the student identify
   bottlenecks from the point of view of performance as well as energy
   consumption; also find out how this consumption scales with workload size.
 \item {\bf Refactor for reduction of energy footprint}: once the bottlenecks
