--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -1,3 +1,93 @@
+@inproceedings{leslie2020specifications,
+  title={Specifications grading: What it is, and lessons learned},
+  author={Leslie, Paula and Lundblom, Erin},
+  booktitle={Seminars in Speech and Language},
+  volume={41},
+  number={04},
+  pages={298--309},
+  year={2020},
+  organization={Thieme Medical Publishers}
+}
+@book{nilson2015specifications,
+  title={Specifications grading: Restoring rigor, motivating students, and saving faculty time},
+  author={Nilson, Linda B and Stanny, Claudia J},
+  year={2015},
+  publisher={Routledge}
+}
+@inproceedings{sampangi2024programming,
+  title={Programming Assignment Ungrading as a License to Learn: Implementing Specifications Grading in the Undergraduate Web Development Classroom},
+  author={Sampangi, Raghav V and Poitras, Eric and Barrera Machuca, Mayra D},
+  booktitle={Proceedings of the 55th ACM Technical Symposium on Computer Science Education V. 2},
+  pages={1808--1809},
+  year={2024}
+}
+
+@article{Marin2022Student,
+	author = {Mar{\' i}n, Victoria I.},
+	journal = {Studies in Technology Enhanced Learning},
+	number = {2},
+	year = {2022},
+	month = {mar 7},
+	note = {https://stel.pubpub.org/pub/02-02-marin-2021},
+	publisher = {},
+	title = {Student-centred learning in higher education in times of {Covid}-19: A critical analysis},
+	volume = {2},
+}
+
+@inproceedings{10.1145/3626252.3630953,
+author = {Decker, Adrienne and Edwards, Stephen H. and McSkimming, Brian M. and Edmison, Bob and Rorrer, Audrey and P\'{e}rez Qui\~{n}ones, Manuel A.},
+title = {Transforming Grading Practices in the Computing Education Community},
+year = {2024},
+isbn = {9798400704239},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3626252.3630953},
+doi = {10.1145/3626252.3630953},
+abstract = {It is often the case that computer science classrooms use traditional grading practices where points are allocated to assignments, mistakes result in point deductions, and assignment scores are combined using some form of weighted averaging to determine grades. Unfortunately, traditional grading practices have been shown to reduce achievement, discourage students, and suppress effort to such an extent that some common elements of traditional grading practices have been termed toxic. Using grades to reward or punish student behavior does not encourage learning and instead increases anxiety and stress. These toxic elements are present throughout computing education and computer science classrooms in the form of late penalties, lack of credit for code that doesn't compile or pass certain unit tests, among others. These types of metrics, that evaluate behavior are often influenced by implicit bias, factors outside of the classrooms (e.g., part-time employment), and family life situations (e.g., students who are caregivers). Often, students in these situations are disproportionately from low-socioeconomic backgrounds and predominantly students of color. Through this paper, we will present a case for adoption of equitable grading practices and a call for additional support in classroom and teaching technologies as well as support from administrations both at the department and university level. By adopting a community of practice approach, we argue that we can support new faculty making these changes, which would be more equitable and inclusive. Further, these practices have been shown to better support student learning and can help increase student learning gains and retention.},
+booktitle = {Proceedings of the 55th ACM Technical Symposium on Computer Science Education V. 1},
+pages = {276–282},
+numpages = {7},
+keywords = {equitable grading, grading for equity, grading practices},
+location = {<conf-loc>, <city>Portland</city>, <state>OR</state>, <country>USA</country>, </conf-loc>},
+series = {SIGCSE 2024}
+}
+
+@inproceedings{10.1145/3626252.3630929,
+author = {Harrington, Brian and Galal, Abdalaziz and Nalluri, Rohita and Nasiha, Faiza and Vadarevu, Anagha},
+title = {Specifications and Contract Grading in Computer Science Education},
+year = {2024},
+isbn = {9798400704239},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3626252.3630929},
+doi = {10.1145/3626252.3630929},
+abstract = {With the recent growth in popularity of alternative evaluation methods, two methodologies have become particularly prevalent in CS education literature: Specifications grading and contract grading. Recent work has shown that these novel evaluation approaches can have positive impacts in the classroom and lead to more equitable outcomes for students. However, there is not yet a consensus on terminology, implementation details and best practices. In this work, we review the literature on the use of specifications and contract grading in CS education. We find that while there is a good deal of promising research, there is a great deal of variation in methodologies and a sparsity of evaluation of the efficacy of learning outcomes.},
+booktitle = {Proceedings of the 55th ACM Technical Symposium on Computer Science Education V. 1},
+pages = {477–483},
+numpages = {7},
+keywords = {alternative evaluation, contract grading, literature review, mastery grading, specifications grading},
+location = {<conf-loc>, <city>Portland</city>, <state>OR</state>, <country>USA</country>, </conf-loc>},
+series = {SIGCSE 2024}
+}
+
+@inproceedings{10.1145/3626252.3630929,
+author = {Harrington, Brian and Galal, Abdalaziz and Nalluri, Rohita and Nasiha, Faiza and Vadarevu, Anagha},
+title = {Specifications and Contract Grading in Computer Science Education},
+year = {2024},
+isbn = {9798400704239},
+publisher = {Association for Computing Machinery},
+address = {New York, NY, USA},
+url = {https://doi.org/10.1145/3626252.3630929},
+doi = {10.1145/3626252.3630929},
+abstract = {With the recent growth in popularity of alternative evaluation methods, two methodologies have become particularly prevalent in CS education literature: Specifications grading and contract grading. Recent work has shown that these novel evaluation approaches can have positive impacts in the classroom and lead to more equitable outcomes for students. However, there is not yet a consensus on terminology, implementation details and best practices. In this work, we review the literature on the use of specifications and contract grading in CS education. We find that while there is a good deal of promising research, there is a great deal of variation in methodologies and a sparsity of evaluation of the efficacy of learning outcomes.},
+booktitle = {Proceedings of the 55th ACM Technical Symposium on Computer Science Education V. 1},
+pages = {477–483},
+numpages = {7},
+keywords = {alternative evaluation, contract grading, literature review, mastery grading, specifications grading},
+location = {<conf-loc>, <city>Portland</city>, <state>OR</state>, <country>USA</country>, </conf-loc>},
+series = {SIGCSE 2024}
+}
+
 @article{tessmer1994formative,
   title={Formative evaluation alternatives},
   author={Tessmer, Martin},
