--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -1,3 +1,15 @@
+@article{dixson2016formative,
+  title={Formative and summative assessment in the classroom},
+  author={Dixson, Dante D and Worrell, Frank C},
+  journal={Theory into practice},
+  volume={55},
+  number={2},
+  pages={153--159},
+  year={2016},
+  publisher={Taylor \& Francis}
+}
+
+
 @inproceedings{leslie2020specifications,
   title={Specifications grading: What it is, and lessons learned},
   author={Leslie, Paula and Lundblom, Erin},
