--- a/formative-evaluation.bib
+++ b/formative-evaluation.bib
@@ -1,3 +1,27 @@
+@article{doi:10.1021/acs.jchemed.2c00740,
+author = {McKnelly, Kate J. and Howitz, William J. and Thane, Taylor A. and Link, Renée D.},
+title = {Specifications Grading at Scale: Improved Letter Grades and Grading-Related Interactions in a Course with over 1,000 Students},
+journal = {Journal of Chemical Education},
+volume = {100},
+number = {9},
+pages = {3179-3193},
+year = {2023},
+doi = {10.1021/acs.jchemed.2c00740},
+
+URL = { 
+    
+        https://doi.org/10.1021/acs.jchemed.2c00740
+    
+    
+
+},
+eprint = { 
+    
+        https://doi.org/10.1021/acs.jchemed.2c00740
+}
+}
+
+
 @article{dixson2016formative,
   title={Formative and summative assessment in the classroom},
   author={Dixson, Dante D and Worrell, Frank C},
