#31 de-anonymizing and minor :recycle:

--- a/paper/agile-teaching.Rnw
+++ b/paper/agile-teaching.Rnw
@@ -30,20 +30,20 @@ Software engineering, agile methodologies, specifications learning, project-base
 
 \section{Introduction}
 
-Teaching software engineering represents not only one, but a series of challenges to the teacher, who needs the student to acquire a series of marketable skills at the same time that this acquisition is assessed in order to obtain a grade; essentially, it needs to deliver a product (student with acquired competences). Software development also focuses on delivering products, and it currently employs an {\em agile mindset}, following the Agile Manifesto \cite{agilemanifesto}, which is a customer-centered philosophy that maintains that any change in code should add value to the customer, either directly or indirectly. Teaching mindsets of philosophies is a notch more complicated than teaching skills; evaluating mindsets is even more complex. But that is what an industry with its ever growing {\em need for talent} is asking for.
+Teaching software engineering represents not only one, but a series of challenges to the teacher, who needs the student to acquire a series of marketable skills at the same time that this acquisition is assessed in order to obtain a grade; essentially, it needs to deliver a product (student with acquired competences). Software development also focuses on delivering products, and it currently employs an {\em agile mindset}, following the Agile Manifesto \cite{agilemanifesto}, which is a customer-centered philosophy that maintains that any change in code should add value to the customer, either directly or indirectly. Teaching mindsets of philosophies is a notch more complicated than teaching skills; evaluating mindsets is even more complex. But that is what an industry with its ever growing {\em need for talent} is asking for. There is a double challenge here: first, designing a course in such a way that, effectively, the student ends up acquiring that mindset and the series of skills that are included in it, but second, and more importantly, provide a consistent experience for students independently of their background or personal attitudes.
 
 One of the ways of teaching a mindset is having that same mindset while teaching; that is, if you want to teach agile, be agile while teaching \cite{chun2004agile,krehbiel2017agile}. One step into this mindset is simply to consider class experience a product for which students, collectively and individually, are the customers, and use industry-standard tools such as GitHub to produce class materials, create course-oriented milestones, as well as generate issues with the problems that need to be solved, content-wise or related to any software that you might have developed to support teaching.
 
-You can, however, go a bit further and embrace agile in all stages of the teaching/learning process. Several researchers have proposed manifestos in agile teaching, so the first step would be to understand those manifestos and adopt them where possible. In our case, the manifesto created by Krehbiel et al. \cite{krehbiel2017agile} seems the closest to our philosophy; this manifesto emphasizes adaptability to personal (and other) circumstances, teamwork, focusing on learning objectives and not on grades, autonomous learning by the student, practical working instead of theoretical teaching, and, over all, continuous improvement.
+You can, however, go a bit further and embrace that same agile mindset in all stages of the teaching/learning process. Several educators have proposed manifestos in agile teaching, so the first step would be to understand those manifestos and adopt them where possible. In our case, the manifesto created by Krehbiel et al. \cite{krehbiel2017agile} seems the closest to our philosophy; this manifesto emphasizes adaptability to personal (and other) circumstances, teamwork, focusing on learning objectives and not on grades, autonomous learning by the student, practical working instead of theoretical teaching, and, over all, continuous improvement.
 
-Manifestos are never enough either in development or teaching, and agile development encourages the adoption of best practices in every phase of development; but the last part of the manifesto which talks about continuous improvement, as well as the fact that we are talking about {\em best} practices, would need some way of measuring progress and how adopted practices affect the classroom. This is why we would like to add a new item to the manifesto: {\em learning analytics} \cite{clow2013overview} over anecdotal evidence or end-of-class failure/success rates.
+Manifestos are never enough either in development or teaching, and agile development encourages the adoption of best practices in every phase of development; but the last part of the manifesto, which talks about continuous improvement, as well as the fact that we are talking about {\em best} practices, would need some way of measuring progress and how adopted practices affect the classroom. This is why we would like to add a new item to the manifesto: {\em learning analytics} \cite{clow2013overview} over anecdotal evidence or end-of-class failure/success rates.
 
 Within this agile mindset, there are teaching methodologies that fit better; adopting these best practices is the first step towards agile teaching. We will focus on two of them that fit well with each other: project-based learning gives the student autonomy (which is one of the items in the manifesto) through the development of a project across one or several subjects \cite{krajcik2006project}; formative evaluation \cite{tessmer1994formative} also fits the autonomous learning part of the manifesto, but also focuses on learning objectives, since it pursues helping the student through continuous feedback on their submitted work (that advances the project mentioned above). This feedback helps continuous improvement of the project they are working with, which is other of the items in the manifesto. Finally, {\em flipped learning} \cite{otero2018flipped}, that turns classrooms into working, and not student-listening-to-lectures spaces, is another best practices that blends well with the two mentioned above.
 
-In this paper we will describe the experience carried out in the last three school years in a 4th year (7th semester) subject in the Computer Science degree at the University of A City in A Country
-% Granada, Spain;
-the subject deals with A Subject Matter
-%Cloud Computing,
+% We need to take and explain choices here, or maybe later.
+
+In this paper we will describe the experience carried out in the last three school years in a 4th year (7th semester) subject in the Computer Science degree at the University of Granada, Spain;
+the subject deals with Cloud Computing,
 so the project needs to be working towards the deployment of an application of that kind. But alongside the description of the experience, we will try to answer the following research questions:\begin{itemize}
 \item {\bf RQ1:} Can you leverage metrics to improve individual and collective learning?
 \item {\bf RQ2:} Are there early indicators or class success or failure?
