--- a/pbl.bib
+++ b/pbl.bib
@@ -12,6 +12,16 @@ eprint = {https://doi.org/10.1177/1365480216659733},
     abstract = { Project-based learning (PBL) is an active student-centred form of instruction which is characterised by students’ autonomy, constructive investigations, goal-setting, collaboration, communication and reflection within real-world practices. It has been explored in various contexts and in different phases of schooling, from primary to higher education. The majority of the reviewed studies were based on a quasi-experimental pretest–posttest design with some baseline equivalence established but no random allocation of participants to control and experimental groups, and as a result, a causal link between PBL instruction and positive student outcomes cannot be established with certainty. Modern digital technology, group processes of high quality, teachers’ ability to effectively scaffold students’ learning and provide guidance and support, the balance between didactic instruction with in-depth inquiry methods and well-aligned assessment have been identified in the literature as facilitating factors in the implementation of PBL. The article concludes with six key recommendations considered to be essential for the successful adoption of a PBL approach in the mainstream school setting. }
 }
 
+@article{karabulut2018systematic,
+  title={A systematic review of research on the flipped learning method in engineering education},
+  author={Karabulut-Ilgu, Aliye and Jaramillo Cherrez, Nadia and Jahren, Charles T},
+  journal={British Journal of Educational Technology},
+  volume={49},
+  number={3},
+  pages={398--411},
+  year={2018},
+  publisher={Wiley Online Library}
+}
 
 @book{krajcik2006project,
   title={Project-based learning},
@@ -22,8 +32,8 @@ eprint = {https://doi.org/10.1177/1365480216659733},
 
 @ARTICLE{7274311,
   author={Gary, Kevin},
-  journal={Computer}, 
-  title={Project-Based Learning}, 
+  journal={Computer},
+  title={Project-Based Learning},
   year={2015},
   volume={48},
   number={9},
